[package]
name = "sret"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full", "server", "http1", "http2"] }
hyper-util = { version = "0.1.16", features = ["full"] }
http-body-util = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
clap = { version = "4.5.41", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.9.2"
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["json"] }
tokio-rustls = "0.26.2"
rustls = "0.23.29"
rustls-pemfile = "2.2.0"
httpdate = "1.0.3"

[dev-dependencies]
tempfile = "3.20.0"
